# CyberGear_WS

./: CBG_Current.py  CBG_MIT.py  CBG_Position.py  CBG_Speed.py  README.md
src/cybergear_controller/: CMakeLists.txt  package.xml
src/cybergear_controller/scripts/: S_curve.py  cybergear_cmd.py  cybergear_fb.py  dummy_script.py
src/cybergear_controller/src/: cpp_node.cpp
src/cybergear_description/: CMakeLists.txt  package.xml
src/cybergear_description/config/: display.rviz
src/cybergear_description/launch/: cybergear.launch.py
src/cybergear_description/meshes/: Hub_Motor.STL  Left_Coupling.STL  Leg.STL  Right_Coupling.STL  Shoulder_Left.STL  Shoulder_Right.STL
src/cybergear_description/robot/visual/: cybergear.xacro
src/ros2_socketcan/launch/: socket_can_receiver.launch.py  socket_can_sender.launch.py
