<package format="3">
  <name>cybergear_description</name>
  <version>0.1.0</version>
  <description>URDF and Xacro description for the CyberGear robot</description>
  <maintainer email="martmanaswin@gmail.com">Manaswin</maintainer>
  <license>MIT</license>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
